Add main and order pages

--- a/index.html
+++ b/index.html
@@ -4,19 +4,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>lab4</title>
+  <link rel="shortcut icon" href="client/static/images/favicon.ico">
+  <title>Car leasing</title>
   <!-- jQuery -->
-  <script src="static/jquery/jquery.min.js" defer></script>
+  <script src="client/static/jquery/jquery.min.js" defer></script>
 
   <!-- Bootstrap -->
-  <link href="static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <script src="static/bootstrap/js/bootstrap.min.js" defer></script>
+  <link href="client/static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <script src="client/static/bootstrap/js/bootstrap.min.js" defer></script>
 
   <!-- Font Awesome -->
-  <link href="static/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+  <link href="client/static/font-awesome/css/font-awesome.min.css" rel="stylesheet">
 
   <!-- Custom styles -->
-  <link href="static/style.css" rel="stylesheet">
+  <link href="client/static/style.css" rel="stylesheet">
   <link href="//fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
   <link rel="stylesheet" href="/build/bundle.css">
 </head>
